# pokeagent-speedrun

./: .dockerignore  .gitignore  .rsyncignore  Dockerfile  README.md  agent_direct_save.state  agent_emb_382608.txt  compute_metrics.py  create_excel.py  dbscan.py  dbscan_rapids.py  downsample.py  emerald_emulator_mgba.py  hdbscan_rapids.py  inspect_dataset.py  kmeans_rapids.py  llm_baseline.py  main.py  manual.py  mgba_emulator.py  online_train.py  pyproject.toml  random_agent.py  requirements.txt  results.json  run_retrieval_comparison.py  test_mine_objectives.py
IDM/: main.py  policy.py
config/: agent.yaml  agent_cosine.yaml  agent_debug.yaml  agent_long.yaml  early_game_agent.yaml  early_game_state_only_agent.yaml  embed_20_objective_agent.yaml  embed_30_objective_agent copy.yaml  embed_30_objective_agent.yaml  embed_objective_agent.yaml  eval_agents.yaml  idm.yaml  idm_2_fps.yaml  idm_rnd_data.yaml  idm_rnd_data_cosine.yaml  idm_rnd_data_ex_none.yaml  idm_rnd_data_v2.yaml  lz_agent.yaml  lz_idm.yaml  lz_idm_debug.yaml  lz_objective_agent.yaml  nitro_agent.yaml  objective_agent.yaml  state_only_agent.yaml  state_only_long_agent.yaml  vpt_baseline.yaml  vpt_early_game.yaml  vpt_full_game.yaml  vpt_test.yaml  whole_game_agent.yaml
data/: download_videos.py  search_terms.py
dataclass/: __init__.py
dataset/: IDMdataset.py  __init__.py  idm.py
dconfig/: AgentDocker  DebugDocker  Dockerfile  Dockerfile.llm_baseline  RndPolicyDocker  RndPolicyExNoneDocker  apptainer_dev.def  apptainer_llm_baseline.def  apptainer_prod.def  apptainer_run.def
embedding/: test.py
emulator/: emulator_client.py  emulator_connection.py  emulator_manual_client.py  emulator_subprocess.py  json_writer.py  keys.py  mgba_emulator.py
eval/: extract_frame.py  extract_milestone.py  milestones_report.py  pad_agent_intervals.py
idm_validate/: example_config.yaml  filter_idm_data.py  validate_idm.py
inference/: basic_inference.py  basic_inference_create_video.py  clip_embed.py  clip_video_inference.py  dataset_embed.py  dino_embed.py  idm_inference_dataloader.py
mydataclass/: __init__.py
pipeline/: main.py
playground/: test.py  train.py
policy/: __init__.py  policy.py  random_policy.py
s3_utils/: s3_sync.py
scrape/: download_videos.py  search_youtube.py
script/: build_and_run.sh  build_and_run_llm_baseline.sh  build_apptainer_dev.sh  build_apptainer_prod.sh  build_docker.sh  clip_embed.sh  collect_lz_data.py  collect_lz_data.sh  collect_lz_data_run.sh  convert_sif.sh  create_merged_embeddings.sh  debug.sh  dino_embed.sh  docker_llm_baseline.sh  eval_checkpoint.sh  find_corrupt_videos.py  fir_build_and_run.sh  fir_pokeagent_run.sh  interactive_dev.sh  (+36 more)
(+129 files in other folders)
