[project]
name = "ai4pokemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "boto3>=1.40.36",
    "cffi>=1.6",
    "colorama>=0.4.6",
    "cut-cross-entropy>=25.1.1",
    "datasets>=4.1.1",
    "einops>=0.8.1",
    "eventlet==0.35.2",
    "fastapi>=0.104.0",
    "flask==3.0.2",
    "flask-socketio==5.3.6",
    "gevent==23.9.1",
    "gevent-websocket==0.10.1",
    "google-api-python-client>=2.179.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-generativeai>=0.3.0",
    "gpustat>=1.1.1",
    "grpcio>=1.48.2",
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "mgba==0.10.2",
    "more-itertools>=10.7.0",
    "numpy==1.26.4",
    "openai==1.90.0",
    "opencv-python==4.9.0.80",
    "openpyxl>=3.1.5",
    "orjson>=3.11.3",
    "pillow==10.2.0",
    "protobuf>=3.20.0",
    "pydantic>=2.0.0",
    "pygame==2.6.1",
    "python-dotenv==1.0.1",
    "python-engineio==4.9.0",
    "python-socketio==5.11.1",
    "pytubefix>=9.5.0",
    "pytz>=2020.1",
    "pyyaml>=5.1",
    "requests>=2.25.0",
    "s3cmd>=2.4.0",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.1.99",
    "six>=1.14.0",
    "torch>=2.0.0",
    "torchcodec==0.8",
    "torchvision>=0.23.0",
    "transformers>=4.36.0",
    "uvicorn[standard]>=0.24.0",
    "wandb>=0.22.0",
    "xxhash>=3.5.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

