[project]
name = "ai4pokemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.104.0",
    "mgba==0.10.2",
    "opencv-python>=4.13.0.92",
    "orjson>=3.11.3",
    "pillow>=10.2.0",
    "pygame==2.6.1",
    "vllm==0.18.0",
]
